add all sections

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <a class="active" href="index.html">about</a>
             <a href="projects.html">projects</a>
             <a href="blog.html">blog</a>
-            <a href="books.html">books</a>
-            <a href="experience.html">experience</a>
+            <a href="gallery.html">gallery</a>
+            <a href="stuff.html">stuff</a>
         </div>
         <div id="header-container">
             <h1>thu (joy) than</h1>
