--- a/projects.html
+++ b/projects.html
@@ -14,8 +14,8 @@
             <a href="index.html">about</a>
             <a class="active" href="projects.html">projects</a>
             <a href="blog.html">blog</a>
-            <a href="books.html">books</a>
-            <a href="experience.html">experience</a>
+            <a href="gallery.html">gallery</a>
+            <a href="stuff.html">stuff</a>
         </div>
     </div>
 
