feat: created separate data files and blog content

--- a/gallery.html
+++ b/gallery.html
@@ -10,13 +10,6 @@
 <body>
   <div id="main-container">
     <div id="header-container">
-      <div id="navbar">
-            <a href="index.html">about</a>
-            <a href="projects.html">projects</a>
-            <a href="blog.html">blog</a>
-            <a class="active" href="gallery.html">gallery</a>
-            <a href="stuff.html">stuff</a>
-        </div>
     </div>
     <div id="gallery-page">
         <section class="city-section">
@@ -84,9 +77,9 @@
                 <img src="images/ba9.jpeg" alt="Museum Island" />
             </div>
         </section>
-
-
     </div>
-
+    <script type="module">
+        import { loadNavbar } from './js/navbar.js';
+    </script>
 </body>
 </html>
