--- a/blog.html
+++ b/blog.html
@@ -10,39 +10,21 @@
 <body>
   <div id="main-container">
     <div id="header-container">
-      <div id="navbar">
-        <a href="index.html">about</a>
-        <a href="projects.html">projects</a>
-        <a class="active" href="blog.html">blog</a>
-        <a href="gallery.html">gallery</a>
-        <a href="stuff.html">stuff</a>
-      </div>
+      <div id="navbar-placeholder"></div>
     </div>
 
     <div id="blog-page">
-      <ul class="blog-list">
-        <li>
-          <a href="#">
-            <h2>How I Built Zen</h2>
-            <p class="description">Behind the scenes of designing and building an AI-powered journaling app for emotional insight and reflection.</p>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <h2>Notes on Learning Language Models</h2>
-            <p class="description">Personal reflections and takeaways from studying how large language models work and where they're heading.</p>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <h2>Design Principles for Engineers</h2>
-            <p class="description">Practical UI/UX concepts that help engineers build cleaner, more human-focused products.</p>
-          </a>
-        </li>
-      </ul>
-
+      <ul class="blog-list"></ul>
       <p class="blog-placeholder">More posts coming soon!</p>
     </div>
   </div>
+
+  <script type="module">
+    import { loadNavbar } from './js/navbar.js';
+    import { renderBlogPosts } from './js/render-blog.js';
+
+    loadNavbar();
+    renderBlogPosts();
+  </script>
 </body>
 </html>
